# flag

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  main.rs  nargs.md
.github/workflows/: rust.yml  rust.yml~
examples/: 01.rs
procs/: Cargo.toml  flag.rs  main.rs  nargs.rs  parser.rs  try_parse.rs
src/: lib.rs  main.rs  try_parse.rs
