[package]
name = "flag"
version = "0.0.1"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
categories = ["command-line-interface", "parsing", "utilities", "development-tools"]
description = "Ultra lightweight library to parse flags"
keywords = ["flags", "flag", "lightweight", "library"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakivo/flag"
rust-version = "1.56.0"
